IndexedDB: Propagate more leveldb errors to script https://bugs.webkit.org/show_bug.cgi?id=104422

Reviewed by Tony Chang.

Source/WebCore:

These are the last places that ignore leveldb errors that can get the
usual ok/found treatment.

Nothing called getBool, so it is deleted.

* Modules/indexeddb/IDBBackingStore.cpp:
(WebCore):
(WebCore::getInt):
(WebCore::isSchemaKnown):
(WebCore::setUpMetadata):
(WebCore::getMaxObjectStoreId):
(WebCore::IDBBackingStore::open):
(WebCore::IDBBackingStore::getIDBDatabaseMetaData):
(WebCore::getNewDatabaseId):
(WebCore::IDBBackingStore::createIDBDatabaseMetaData):
(WebCore::setMaxObjectStoreId):
(WebCore::getNewVersionNumber):
(WebCore::IDBBackingStore::putRecord):
(WebCore::setMaxIndexId):
* Modules/indexeddb/IDBBackingStore.h:
(IDBBackingStore):
* Modules/indexeddb/IDBObjectStoreBackendImpl.cpp:
(WebCore::IDBObjectStoreBackendImpl::setIndexKeys):
(WebCore::IDBObjectStoreBackendImpl::ObjectStoreStorageOperation::perform):

Source/WebKit/chromium:

* tests/IDBFakeBackingStore.h:
  Delete method override that doesn't match new signature.


Canonical link: https://commits.webkit.org/122778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137223 268f45cc-cd09-0410-ab3c-d52691b4dbfc